--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 certifi==2019.11.28
 chardet==3.0.4
+click==7.1.1
 Cython==0.29.16
 et-xmlfile==1.0.1
+Flask==1.1.1
 idna==2.9
+itsdangerous==1.1.0
 jdcal==1.4.1
+Jinja2==2.11.1
+MarkupSafe==1.1.1
 numpy==1.18.2
 openpyxl==3.0.3
 pandas==1.0.3
@@ -14,3 +19,4 @@ requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.15
 urllib3==1.25.8
+Werkzeug==1.0.0
