--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ chardet==3.0.4
 click==7.1.1
 Cython==0.29.16
 et-xmlfile==1.0.1
-Flask==1.1.1
 idna==2.9
 itsdangerous==1.1.0
 jdcal==1.4.1
@@ -16,6 +15,7 @@ pymssql==2.1.4
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
+schedule==0.6.0
 six==1.14.0
 SQLAlchemy==1.3.15
 urllib3==1.25.8
