--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,7 @@ requests==2.23.0
 schedule==0.6.0
 six==1.14.0
 SQLAlchemy==1.3.15
+transliterate==1.10.2
 urllib3==1.25.8
 Werkzeug==1.0.0
+xlrd==1.2.0
